fix: ensure projects wrap correctly

--- a/src/pages/PortfolioPage/sections/ProjectsSection/ProjectsSection.css
+++ b/src/pages/PortfolioPage/sections/ProjectsSection/ProjectsSection.css
@@ -29,7 +29,7 @@
 }
 
 #projects-section-projects-wrapper {
-    width: 100%;
+    width: 95%;
     margin: 0 auto;
     margin-top: 60px;
 
